--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,90 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:opencv="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.hp.opencvtest.MainActivity">
 
-    <org.opencv.android.JavaCameraView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:visibility="gone"
-        android:screenOrientation="portrait"
-        android:id="@+id/tutorial1_activity_java_surface_view"
-        opencv:show_fps="true"
-        opencv:camera_id="any"
-        android:layout_below="@+id/text1"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:id="@+id/text1"
-        android:text="test"
-        android:textStyle="bold"
-        android:textColor="#ff00ff"
-        android:background="#00ff00"
-        android:textColorHighlight="#000000"
-        android:textIsSelectable="true"
-        android:textSize="32sp"
+        android:text="snapshot"
+        android:id="@+id/snapshot"
+        android:paddingTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="26dp"
         />
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/Lay1"
+        android:layout_below="@id/snapshot"
+        android:paddingBottom="16dp"
+        >
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/snapshot"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/newText"
+            android:hint="Add Text here"
+            android:layout_weight="7"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Voice"
+            android:onClick="voice"
+            />
+    </LinearLayout>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Lay1"
+        android:text="search"
+        android:paddingTop="20dp"
+        android:onClick="search"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Click"
+        android:id="@+id/clicked"
+        android:onClick="click"
+        android:layout_below="@+id/snapshot"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="136dp"
+        android:paddingBottom="16dp"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Detct Feature"
+        android:id="@+id/feature"
+        android:layout_below="@id/clicked"
+        android:layout_marginTop="32dp"
+        android:paddingBottom="16dp"
+        android:onClick="feature"
+        />
+
+    <ImageView android:id="@+id/imageView1"
+        android:layout_height="170dp"
+        android:src="@drawable/img"
+        android:layout_width="212dp"
+        android:layout_below="@id/feature"
+        android:maxHeight="180dp"
+        android:layout_centerHorizontal="true"
+        />
+
+</RelativeLayout>
